# event-trigger-action-system-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: conditions.rs  constructors.rs  lib.rs  tests.rs  triggers.rs
src/triggers/: mod.rs  std_lib_implementations.rs
src/triggers/std_lib_implementations/: mod.rs
tests/: example.rs
