[package]
name = "event-trigger-action-system"
description = "A system that triggers actions based on events with user-programmable triggers"
version = "0.6.2"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/ISibboI/event-trigger-action-system-rs"

rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btreemultimap-value-ord = "0.4.0"
serde = {version = "1.0.144", features = ["derive"], optional = true}

[features]
serde = ["btreemultimap-value-ord/serde", "dep:serde"]
